2005-06-14  Sarfraaz Ahmed <asarfraaz@novell.com>

	* addressbook/e-book-backend-exchange.c
	* calendar/e-cal-backend-exchange-calendar.c
	* calendar/e-cal-backend-exchange-tasks.c
	* calendar/e-cal-backend-exchange.c
	* calendar/e-cal-backend-exchange.h
	* calendar/e2k-cal-query.c
	* calendar/e2k-cal-query.h
	* calendar/e2k-cal-utils.c
	* calendar/e2k-cal-utils.h
	* mail/Makefile.am
	* mail/mail-stub-exchange.c
	* mail/mail-stub-exchange.h
	* mail/mail-stub-listener.c
	* mail/mail-stub.c
	* mail/mail-utils.c
	* storage/exchange-autoconfig-wizard.c
	* storage/exchange-autoconfig-wizard.h
	* storage/exchange-config-listener.c
	* storage/exchange-migrate.c
	* storage/main.c
	* storage/ximian-connector-setup.c :
	Use the proper include paths.

2005-06-14  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Exit configure if e-d-s was not built with Exchange 
	support
	* addressbook/e-book-backend-gal.c : Include e2k-global-catalog-ldap.h

2005-06-10  Sarfraaz Ahmed <asarfraaz@novell.com>

	Initial commit to use Exchange server communication code from e-d-s
	* Makefile.am : Removed xntlm and lib
	* configure.in : Check for libexchange-storage-1.2.pc
	* addressbook/Makefile.am : Dont look for lib in exchange sources
	* calendar/Makefile.am : Similar
	* calendar/e-cal-backend-exchange-tasks.c : Use proper includes
	* camel/Makefile.am : Dont look for xntlm in exchange sources
	* mail/Makefile.am : Dont look for lib in exchange sources
	* mail/mail-stub-exchange.c : Use ExchangeComponent for offline checks
	instead of ExchangeAccount.
	* storage/Makefile.am : Moved out e-folder-exchange.[ch], 
	exchange-account.[ch], exchange-delegates-user.[ch], 
	exchange-delegates.[ch], exchange-folder-size.[ch], 
	exchange-hierarchy-favorites.[ch], exchange-hierarchy-gal.[ch],
	exchange-hierarchy-somedav.[ch], exchange-hierarchy-webdav.[ch],
	exchange-hierarchy.[ch], exchange-permissions-dialog.[ch], 
	exchange-types.h. Also dont look for lib and xntlm in exchange sources.