@@ -261,8 +261,6 @@ dnl ******************************
 
 AC_OUTPUT([
 Makefile
-xntlm/Makefile
-lib/Makefile
 camel/Makefile
 mail/Makefile
 addressbook/Makefile
