@@ -25,13 +25,9 @@
 #include "xc-backend-view.h"
 #include <e-folder-exchange.h>
 #include "exchange-component.h"
-#include "e2k-utils.h"
+#include <e2k-utils.h>
 #include <exchange-account.h>
-#include "exchange-change-password.h"
-#include "exchange-delegates.h"
 #include <exchange-hierarchy.h>
-#include "exchange-oof.h"
-#include "exchange-permissions-dialog.h"
 #include <exchange-folder-size.h>
 
 #include "e-folder-creation-dialog.h"
@@ -126,10 +122,10 @@ do_unsubscribe_user (BonoboUIComponent *component, gpointer user_data,
 }
 
 static BonoboUIVerb verbs [] = {
-	BONOBO_UI_VERB ("ExchangeOOF", do_oof),
+	/* BONOBO_UI_VERB ("ExchangeOOF", do_oof), */
 	/* BONOBO_UI_VERB ("ExchangeDelegation", do_delegates), */
-	BONOBO_UI_VERB ("ExchangePassword", do_change_password),
-	BONOBO_UI_VERB ("ExchangeFolderSize", do_folder_size_menu),
+	/* BONOBO_UI_VERB ("ExchangePassword", do_change_password), */
+	/* BONOBO_UI_VERB ("ExchangeFolderSize", do_folder_size_menu), */
 	BONOBO_UI_VERB ("ExchangeSubscribeUser", do_subscribe_user),
 	BONOBO_UI_VERB ("ExchangeUnsubscribeUser", do_unsubscribe_user),
 
