@@ -1,3 +1,14 @@
+2005-06-15  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* configure.in : Remove xntlm/Makefile and lib/Makefile from AC_OUTPUT
+	* camel/camel-exchange-provider.c : Fix the include paths
+	* storage/exchange-config-listener.c : Fixed some warnings
+	* storage/exchange-hierarchy-foreign.c :Fixed the include paths
+	* storage/exchange-hierarchy-foreign.h : Moved the typedef here
+	* storage/exchange-hierarchy-somedav.c : Fixed the include paths
+	* storage/exchange-hierarchy-somedav.h : Fixed the include paths
+	* storage/xc-commands.c : Disable menu items and fix include paths.
+
 2005-06-14  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* addressbook/e-book-backend-exchange.c
